--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-lazyload": "^3.2.1",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
